# ohmnote

./: .envrc  Cargo.toml  README.md  ohmnote.3mf  readings.txt  sketch.ino
.cargo/: config.toml
Gerbers/: ohmnote-B_Cu.gbr  ohmnote-B_Mask.gbr  ohmnote-B_Paste.gbr  ohmnote-B_Silkscreen.gbr  ohmnote-Edge_Cuts.gbr  ohmnote-F_Cu.gbr  ohmnote-F_Mask.gbr  ohmnote-F_Paste.gbr  ohmnote-F_Silkscreen.gbr  ohmnote-NPTH-drl_map.gbr  ohmnote-NPTH.drl  ohmnote-PTH-drl_map.gbr  ohmnote-PTH.drl  ohmnote-job.gbrjob
src/: display.rs  lib.rs  meter.rs
